--- a/docs/faststore/docs/customization/dynamic-content/consuming-the-dynamic-content-in-custom-sections.mdx
+++ b/docs/faststore/docs/customization/dynamic-content/consuming-the-dynamic-content-in-custom-sections.mdx
@@ -16,50 +16,50 @@ Create and display a [section](https://developers.vtex.com/docs/guides/faststore
 2. Inside `components`, create a subfolder named `sections`.
 3. Inside `sections` create a file called `ProductHero.tsx`, and paste the following code:
 
-    ``` tsx src/components/sections/ProductHero.tsx
-    import {
-        HeroSection,
-        getOverriddenSection,
-        useDynamicContent,
-    } from "@faststore/core";
-    import { ServerDynamicContentQuery } from "@faststore/core/api";
-    
-    const OverridenHero = getOverriddenSection({
-        Section: HeroSection,
-        components: {
-        HeroImage: {
-            Component: CustomHeroImage,
-        },
-        },
-    });
-    
-    function CustomHeroImage() {
-        const context = useDynamicContent<ServerDynamicContentQuery>();
-    
-        return (
-        <img
-            src={
-            context.data?.extraData?.customFieldFromRoot ??
-            "https://via.placeholder.com/350"
-            }
-            width={400}
-            alt={context.data?.extraData?.customField ?? "Hero section image"}
-        />
-        );
-    }
-    
-    export default function ProductHero(
-        props: React.ComponentProps<typeof OverridenHero>
-    ) {
-        const context = useDynamicContent<ServerDynamicContentQuery>();
-        return (
-        <OverridenHero
-            {...props}
-            image={{ src: "noop", alt: "noop" }}
-            title={context.data?.extraData?.customField ?? "Add the Hero section title here"}
-        />
-        );
-    }
+    ``` tsx
+        import {
+            HeroSection,
+            getOverriddenSection,
+            useDynamicContent,
+        } from "@faststore/core";
+        import { ServerDynamicContentQuery } from "@faststore/core/api";
+        
+        const OverridenHero = getOverriddenSection({
+            Section: HeroSection,
+            components: {
+            HeroImage: {
+                Component: CustomHeroImage,
+            },
+            },
+        });
+        
+        function CustomHeroImage() {
+            const context = useDynamicContent<ServerDynamicContentQuery>();
+        
+            return (
+            <img
+                src={
+                context.data?.extraData?.customFieldFromRoot ??
+                "https://via.placeholder.com/350"
+                }
+                width={400}
+                alt={context.data?.extraData?.customField ?? "Hero section image"}
+            />
+            );
+        }
+        
+        export default function ProductHero(
+            props: React.ComponentProps<typeof OverridenHero>
+        ) {
+            const context = useDynamicContent<ServerDynamicContentQuery>();
+            return (
+            <OverridenHero
+                {...props}
+                image={{ src: "noop", alt: "noop" }}
+                title={context.data?.extraData?.customField ?? "Add the Hero section title here"}
+            />
+            );
+        }
     ```
 
     - The `useDynamicContent` hook brings the data from the [`@faststore/core`](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson) package.
@@ -71,9 +71,9 @@ Create and display a [section](https://developers.vtex.com/docs/guides/faststore
 4. Create an `index.tsx` file inside the components folder and paste the following code:
 
     ```tsx
-    import ProductHero from “./sections/ProductHero”
+        import ProductHero from “./sections/ProductHero”
 
-    export default { ProductHero };
+        export default { ProductHero };
     ```
 
 This file helps import and export our new component. Now that the component is ready, let’s create its section schema for the Headless CMS.
@@ -87,58 +87,58 @@ To define a schema for the `ProductHero` component within the Headless CMS, foll
 3. Paste the following code:
 
     ```json
-    [
-        {
-            "name": "ProductHero",
-            "schema": {
-            "title": "Hero with a Fixed Image",
-            "description": "Add a quick promotion with an image/action pair",
-            "type": "object",
-            "required": ["title"],
-            "properties": {
-                "title": {
-                "title": "Title",
-                "type": "string"
-                },
-                "subtitle": {
-                "title": "Subtitle",
-                "type": "string"
-                },
-                "link": {
-                "title": "Call to Action",
+        [
+            {
+                "name": "ProductHero",
+                "schema": {
+                "title": "Hero with a Fixed Image",
+                "description": "Add a quick promotion with an image/action pair",
                 "type": "object",
+                "required": ["title"],
                 "properties": {
-                    "text": {
-                    "type": "string",
-                    "title": "Text"
+                    "title": {
+                    "title": "Title",
+                    "type": "string"
                     },
-                    "url": {
-                    "type": "string",
-                    "title": "URL"
+                    "subtitle": {
+                    "title": "Subtitle",
+                    "type": "string"
                     },
-                    "linkTargetBlank": {
-                    "type": "boolean",
-                    "title": "Open link in new window?",
-                    "default": false
+                    "link": {
+                    "title": "Call to Action",
+                    "type": "object",
+                    "properties": {
+                        "text": {
+                        "type": "string",
+                        "title": "Text"
+                        },
+                        "url": {
+                        "type": "string",
+                        "title": "URL"
+                        },
+                        "linkTargetBlank": {
+                        "type": "boolean",
+                        "title": "Open link in new window?",
+                        "default": false
+                        }
+                    }
+                    },
+                    "colorVariant": {
+                    "type": "string",
+                    "title": "Color variant",
+                    "enumNames": ["Main", "Light", "Accent"],
+                    "enum": ["main", "light", "accent"]
+                    },
+                    "variant": {
+                    "type": "string",
+                    "title": "Variant",
+                    "enumNames": ["Primary", "Secondary"],
+                    "enum": ["primary", "secondary"]
                     }
                 }
-                },
-                "colorVariant": {
-                "type": "string",
-                "title": "Color variant",
-                "enumNames": ["Main", "Light", "Accent"],
-                "enum": ["main", "light", "accent"]
-                },
-                "variant": {
-                "type": "string",
-                "title": "Variant",
-                "enumNames": ["Primary", "Secondary"],
-                "enum": ["primary", "secondary"]
                 }
             }
-            }
-        }
-    ]
+        ]
     ```
 
 4. Run `yarn cms-sync` to synchronize the changes.
