--- a/docs/faststore/docs/customization/dynamic-content/setting-up-the-store-code-for-dynamic-content.mdx
+++ b/docs/faststore/docs/customization/dynamic-content/setting-up-the-store-code-for-dynamic-content.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Setting up the store code for Dynamic Content'
+title: "Setting up the store code for Dynamic Content"
 ---
 
 ## Step 1 - Mapping pages and data-fetching functions
@@ -11,23 +11,25 @@ Create a file to map the home and landing Pages to their data-fetching functions
 3. Inside the `dynamicContent` folder, create the `index.ts` file.
 4. Inside `index.ts`, add the following code:
 
-    ```ts
-        const fetchDataMyLandingPage = async () => {
-            const response = await fetch("https://fakestoreapi.com/products").then((res) => res.json());
+   ```ts
+   const fetchDataMyLandingPage = async () => {
+     const response = await fetch("https://fakestoreapi.com/products").then(
+       (res) => res.json()
+     );
 
-            return { data: response };
-        };
+     return { data: response };
+   };
 
-        const dynamicContent = {
-            "my-landing-page": fetchDataMyLandingPage,
-        }
+   const dynamicContent = {
+     "my-landing-page": fetchDataMyLandingPage,
+   };
 
-        export default dynamicContent;
-    ```
+   export default dynamicContent;
+   ```
 
-    - First, we define the `fetchDataMyLandingPage`, which calls for an external API (`https://fakestoreapi.com/products`) to fetch the product information.
-    - The `data` object returns the information.
-    - The `dynamicContent` relates the slug that we will define in the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/dynamic-content-consuming-the-dynamic-content-in-custom-sections).
+   - First, we define the `fetchDataMyLandingPage`, which calls for an external API (`https://fakestoreapi.com/products`) to fetch the product information.
+   - The `data` object returns the information.
+   - The `dynamicContent` relates the slug that we will define in the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/dynamic-content-consuming-the-dynamic-content-in-custom-sections).
 
 Let’s dive deep into `dynamicContent` and the pages allowed to be customized with the Dynamic Content feature: home and landing pages:
 
@@ -74,131 +76,131 @@ After [mapping pages and data-fetching functions](#step-1-mapping-pages-and-data
 4. Inside `typeDefs` create the `extra.graphql` file.
 5. Add the following code:
 
-    ```graphql
-        type Rating {
-        rate: String
-        count: Int
-        }
+   ```graphql
+   type Rating {
+     rate: String
+     count: Int
+   }
 
-        type ProductsExtraData {
-        id: Int
-        title: String
-        price: Float
-        description: String
-        category: String
-        image: String
-        rating: Rating
-        }
+   type ProductsExtraData {
+     id: Int
+     title: String
+     price: Float
+     description: String
+     category: String
+     image: String
+     rating: Rating
+   }
 
-        type ExtraData {
-        """
-        Data customizing ExtraData
-        """
-        data: [ProductsExtraData]
-        customFieldFromRoot: String
-        customField: String
-        }
+   type ExtraData {
+     """
+     Data customizing ExtraData
+     """
+     data: [ProductsExtraData]
+     customFieldFromRoot: String
+     customField: String
+   }
 
-        type NamedExtraData {
-        """
-        Data customizing NamedExtraData
-        """
-        data: String!
-        }
+   type NamedExtraData {
+     """
+     Data customizing NamedExtraData
+     """
+     data: String!
+   }
 
-        type Query {
-        extraData: ExtraData
-        namedExtraData(name: String!): NamedExtraData
-        }
-    ```
+   type Query {
+     extraData: ExtraData
+     namedExtraData(name: String!): NamedExtraData
+   }
+   ```
 
-    - The field `ProductsExtraData` represents product data, with fields for id, title, price, description, category, image, and rating.
+   - The field `ProductsExtraData` represents product data, with fields for id, title, price, description, category, image, and rating.
 
-    - The field `ExtraData` combines a list of `ProductsExtraData` and additional custom fields.
+   - The field `ExtraData` combines a list of `ProductsExtraData` and additional custom fields.
 
-    - The field `Query` defines queries for fetching extraData and namedExtraData.
+   - The field `Query` defines queries for fetching extraData and namedExtraData.
 
-    Now, create the logic to fill these fields:
+   Now, create the logic to fill these fields:
 
 6. Create a file called `query` inside the' resolvers' folder.
 7. Add the following code to it:
 
-    ```ts
-        export type ProductsExtraData = {
-        id: number;
-        title: string;
-        price: number;
-        description: string;
-        category: string;
-        image: string;
-        rating: {
-            rate: number;
-            count: number;
-        };
-        };
+   ```ts
+   export type ProductsExtraData = {
+     id: number;
+     title: string;
+     price: number;
+     description: string;
+     category: string;
+     image: string;
+     rating: {
+       rate: number;
+       count: number;
+     };
+   };
 
-        async function getProductsFromAPI() {
-        const response = await fetch("https://fakestoreapi.com/products");
-        return response.json();
-        }
+   async function getProductsFromAPI() {
+     const response = await fetch("https://fakestoreapi.com/products");
+     return response.json();
+   }
 
-        export const Query = {
-        extraData: async (): Promise<{ data: ProductsExtraData[] }> => {
-            const products = await getProductsFromAPI();
-            return { data: products };
-        },
-        namedExtraData: (_: unknown, { name }: { name: string }) => ({
-            data: `Named extra data: ${name}`,
-        }),
-        };
-    ```
+   export const Query = {
+     extraData: async (): Promise<{ data: ProductsExtraData[] }> => {
+       const products = await getProductsFromAPI();
+       return { data: products };
+     },
+     namedExtraData: (_: unknown, { name }: { name: string }) => ({
+       data: `Named extra data: ${name}`,
+     }),
+   };
+   ```
 
-    - `getProductsFromAPI` fetches product data from an external API.
-    - `extraData` resolves the `extraData` query by fetching and returning products.
-    - `namedExtraData` resolves the `namedExtraData` query by returning a custom message.
+   - `getProductsFromAPI` fetches product data from an external API.
+   - `extraData` resolves the `extraData` query by fetching and returning products.
+   - `namedExtraData` resolves the `namedExtraData` query by returning a custom message.
 
 8. Create a file called `extra.ts` inside the' resolvers' folder.
 9. Add the following code to it:
 
-    ```ts
-        import { ExtraDataRoot } from "./query";
+   ```ts
+   import { ExtraDataRoot } from "./query";
 
-        export const ExtraData = {
-        data: (root: ExtraDataRoot) => root.data,
-        customFieldFromRoot: (root: ExtraDataRoot) => root?.data?.[0]?.image ?? "",
-        customField: async (_: ExtraDataRoot) => {
-            const res = await fetch(
-            "https://fakestoreapi.com/products/category/jewelery"
-            );
-            const customField = await res.json();
-            return (customField?.[0]?.title as string) ?? "";
-        },
-        };
-    ```
+   export const ExtraData = {
+     data: (root: ExtraDataRoot) => root.data,
+     customFieldFromRoot: (root: ExtraDataRoot) => root?.data?.[0]?.image ?? "",
+     customField: async (_: ExtraDataRoot) => {
+       const res = await fetch(
+         "https://fakestoreapi.com/products/category/jewelery"
+       );
+       const customField = await res.json();
+       return (customField?.[0]?.title as string) ?? "";
+     },
+   };
+   ```
 
-    - The `Query` function returns the API data in the field `extraData` through a request on an external API.
+   - The `Query` function returns the API data in the field `extraData` through a request on an external API.
 
 10. Inside the `resolvers` folder, create a file called `index.ts` and add the following code:
 
     ```ts
-        import { ExtraData } from "./extraData";
-        import { Query } from "./query";
+    import { ExtraData } from "./extraData";
+    import { Query } from "./query";
 
-        const resolvers = {
-        ExtraData,
-        Query,
-        };
+    const resolvers = {
+      ExtraData,
+      Query,
+    };
 
-        export default resolvers;
+    export default resolvers;
     ```
 
 11. Combine your resolvers and queries into the store's dynamic content in the `index.tsx` file inside the `dynamicContent` folder.
 
     ```ts mark=1:33
-        import { gql } from "@faststore/core/api";
-        import { execute_unstable as execute } from "@faststore/core/experimental";
+    import { gql } from "@faststore/core/api";
+    import { execute_unstable as execute } from "@faststore/core/experimental";
 
-        const query = gql(`
+    const query = gql(`
         query ServerDynamicContent($name: String!){
             extraData {
             data {
@@ -215,41 +217,44 @@ After [mapping pages and data-fetching functions](#step-1-mapping-pages-and-data
             data
             }
         }
-        `);
+    `);
 
-        async function fetchDataUsingApiExtension() {
-        try {
-            const result = await execute({
-            variables: { name: "example-name" },
-            operation: query,
-            });
-            return { data: result.data };
-        } catch (error) {
-            return { data: null, errors: ["Error fetching data from API Extensions"] };
-        }
-        }
-
-        // Map slugs to data-fetching functions
-        const dynamicContent = {
-        "my-landing-page-api-extensions": fetchDataUsingApiExtension,
+    async function fetchDataUsingApiExtension() {
+      try {
+        const result = await execute({
+          variables: { name: "example-name" },
+          operation: query,
+        });
+        return { data: result.data };
+      } catch (error) {
+        return {
+          data: null,
+          errors: ["Error fetching data from API Extensions"],
         };
+      }
+    }
 
-        export default dynamicContent;
+    // Map slugs to data-fetching functions
+    const dynamicContent = {
+      "my-landing-page-api-extensions": fetchDataUsingApiExtension,
+    };
+
+    export default dynamicContent;
     ```
 
     - Imports:
-        - Import `gql` for defining GraphQL queries.
-        - Import execute_unstable for running server-side GraphQL queries.
+      - Import `gql` for defining GraphQL queries.
+      - Import execute_unstable for running server-side GraphQL queries.
     - `query` Defining the GraphQL Query:
-        - Query named `ServerDynamicContent` accepts a `name` parameter.
-        - Fetches fields under `extraData` including nested `rating`.
-        - Fetches `namedExtraData` based on the name parameter.
+      - Query named `ServerDynamicContent` accepts a `name` parameter.
+      - Fetches fields under `extraData` including nested `rating`.
+      - Fetches `namedExtraData` based on the name parameter.
     - `fetchDataUsingApiExtension`:
-        - It executes to run the GraphQL query with specified variables.
-        - Returns the result data or logs and returns an error if it fails.
+      - It executes to run the GraphQL query with specified variables.
+      - Returns the result data or logs and returns an error if it fails.
     - `dynamicContent`:
-        - Maps the slug `my-landing-page-api-extensions` to the `fetchDataUsingApiExtension function`.
-        - This slug identifies in the code which content we want to bring to the page.
+      - Maps the slug `my-landing-page-api-extensions` to the `fetchDataUsingApiExtension function`.
+      - This slug identifies in the code which content we want to bring to the page.
 
 You can render this data in your store sections once you've set up your dynamic content fetching functions and mappings. See the [consuming-the-dynamic-content-in-custom-sections](https://developers.vtex.com/docs/guides/faststore/dynamic-content-consuming-the-dynamic-content-in-custom-sections) guide for more information on using this data in a new section.
 
@@ -259,7 +264,7 @@ You can render this data in your store sections once you've set up your dynamic 
 
 You can use [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API) to directly fetch data from an endpoint.
 
-    ```ts
+        ```ts
         async function fetchDataMyLandingPage() {
         const response = await fetch("https://fakestoreapi.com/products");
         const data = await response.json();
@@ -272,7 +277,7 @@ You can use [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_A
         };
 
         export default dynamicContent;
-    ```
+        ```
 
 - `fetchDataMyLandingPage`:
   - Fetches data from `https://fakestoreapi.com/products``.
@@ -282,7 +287,7 @@ You can use [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_A
 
 Use `Promise.all` to fetch data from multiple endpoints concurrently.
 
-    ```ts
+        ```ts
         async function fetchDataHomepage() {
         try {
             const [apiData1, apiData2] = await Promise.all([
@@ -297,7 +302,6 @@ Use `Promise.all` to fetch data from multiple endpoints concurrently.
             },
             };
         } catch (error) {
-            console.error("Error fetching data from APIs:", error);
             return { data: null, error: "Error fetching data from APIs" };
         }
         }
@@ -309,7 +313,7 @@ Use `Promise.all` to fetch data from multiple endpoints concurrently.
         };
 
         export default dynamicContent;
-    ```
+        ```
 
 - `fetchDataHomepage`:
   - Concurrently fetches data from two endpoints.
@@ -321,21 +325,21 @@ Once you've set up your dynamic content fetching functions and mappings, you can
 
 For both approaches, [data fetching using Fetch API] or Data Fetching using API Extensions feature, the data-fetching function must return an object with data as the root key in the following format:
 
-    ```ts
+        ```ts
         return {
         data: {
             // data fetched
         },
         };
-    ```
+        ```
 
 The data object can contain other objects inside:
 
-    ```ts
+        ```ts
         return {
         data: {
             key1: result1,
             key2: result2,
         },
         };
-    ```
+        ```
