remove gif with the build webhook information

--- a/docs/faststore/docs/headless-cms/1-configuring-the-vtex-account.mdx
+++ b/docs/faststore/docs/headless-cms/1-configuring-the-vtex-account.mdx
@@ -68,11 +68,8 @@ Now, check if the installation of the Headless CMS plugin was successful by runn
 Let's configure the URLs of the webhooks used by the Headless CMS app.
 
 1. In the VTEX Admin, access **Storefront > Headless CMS**. 
-2. In the FastStore project interface, click on `Settings`.
+2. In the FastStore project interface, click on `Settings` (⚙️).
 3. In **Settings**, click the `Build` tab.
-
-    ![cms-settings](https://vtexhelp.vtexassets.com/assets/docs/src/build-url___c220e60df37fbf4fc612eeebd4c90602.gif)
-
 4. Fill the **Preview URL** field with your production URL. This URL activates the button on Headless CMS so you can preview the changes made on a page. _Replace the values between curly brackets according to your scenario._
 
     ```sh
