--- a/docs/faststore/docs/reference/project-structure/updating-the-core-package-version.mdx
+++ b/docs/faststore/docs/reference/project-structure/updating-the-core-package-version.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Updating the `@fastore/core` package version'
+title: "Updating the '@fastore/core' package version"
 ---
 
 If you need to update the [`@fastore/core`](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson) package, follow the instructions below:
