--- a/docs/faststore/docs/headless-cms/2-setting-up-the-headless-cms.mdx
+++ b/docs/faststore/docs/headless-cms/2-setting-up-the-headless-cms.mdx
@@ -38,8 +38,17 @@ If your project already includes any of the following files: `content-types.json
 2. Create a new folder named `cms` at the root of your FastStore project and a subfolder named `faststore` inside the `cms`. Run the following command to create them:
 
 <Tabs items={["macOs and Linux", "Windows"]} defaultIndex="0">
-  <Tab>```bash mkdir -p cms/faststore ```</Tab>
-  <Tab>```bash mkdir cms\faststore ```</Tab>
+  <Tab>
+    ```bash 
+    mkdir -p cms/faststore 
+    ```
+  </Tab>
+
+  <Tab>
+    ```bash 
+    mkdir cms\faststore 
+    ```
+  </Tab>
 </Tabs>
 
 3. Create the two files below inside the `faststore` folder by running the following command:
@@ -48,12 +57,16 @@ If your project already includes any of the following files: `content-types.json
 
 <Tabs items={["macOs and Linux", "Windows"]} defaultIndex="0">
   <Tab>
-    ```bash touch cms/faststore/content-types.json cms/faststore/sections.json
+    ```bash 
+    touch cms/faststore/content-types.json cms/faststore/sections.json
     ```
   </Tab>
+
   <Tab>
-    ```bash type nul > cms\faststore\content-types.json type nul >
-    cms\faststore\sections.json ```
+    ```bash 
+    type nul > cms\faststore\content-types.json 
+    type nul > cms\faststore\sections.json 
+    ```
   </Tab>
 </Tabs>
 
