fix title and filename

--- a/docs/faststore/docs/headless-cms/previewing-changes-in-development-mode.mdx
+++ b/docs/faststore/docs/headless-cms/previewing-changes-in-development-mode.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'How to preview Headless CMS in development mode'
+title: 'Previewing Headless CMS in development mode'
 ---
 
 During the implementation of a new section or component in the Headless CMS, you can use the `dev mode` to preview the Headless CMS before pushing the changes to your live store.
