--- a/docs/faststore/docs/headless-cms/2-setting-up-the-headless-cms.mdx
+++ b/docs/faststore/docs/headless-cms/2-setting-up-the-headless-cms.mdx
@@ -38,17 +38,17 @@ If your project already includes any of the following files: `content-types.json
 2. Create a new folder named `cms` at the root of your FastStore project and a subfolder named `faststore` inside the `cms`. Run the following command to create them:
 
 <Tabs items={["macOs and Linux", "Windows"]} defaultIndex="0">
-  <Tab>
+  <Tabs.Tab>
     ```bash 
     mkdir -p cms/faststore 
     ```
-  </Tab>
+  </Tabs.Tab>
 
-  <Tab>
+  <Tabs.Tab>
     ```bash 
     mkdir cms\faststore 
     ```
-  </Tab>
+  </Tabs.Tab>
 </Tabs>
 
 3. Create the two files below inside the `faststore` folder by running the following command:
